# ruSTAR

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  build.rs
.github/workflows/: ci.yml  release.yml
LICENSES/: README.md
docs/: astro.config.mjs  phase13_accuracy.md  phase15_sam_tags.md  phase16_14_nstart_fix.md  phase16_algorithm.md  phase17_features.md
docs/src/components/: Header.astro
docs/src/content/docs/: index.mdx
docs/src/content/docs/about/: contributing.md
docs/src/styles/: custom.css
docs/star_comparison/: 04_seed_window_dp.md  DIFFERENCES.md
src/: cpu.rs  error.rs  lib.rs  main.rs  mapq.rs  params.rs  stats.rs
src/align/: mod.rs  read_align.rs  score.rs  seed.rs  stitch.rs  transcript.rs
src/chimeric/: detect.rs  mod.rs  output.rs  score.rs  segment.rs
src/genome/: fasta.rs  mod.rs
src/index/: io.rs  mod.rs  packed_array.rs  sa_index.rs  suffix_array.rs
src/io/: bam.rs  fastq.rs  mod.rs  sam.rs
src/junction/: gtf.rs  mod.rs  sj_output.rs  sjdb_insert.rs
src/quant/: mod.rs  transcriptome.rs
test/: IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  STAR_REFERENCE.md  assess_faithfulness.py  ci.sh  compare_chimeric.py  compare_golden.py  compare_junctions.py  compare_pe.py  compare_sam.py  compare_sam_thorough.py  data_setup.sh  debug_star.sh  diagnose_disagreements.py  diff_star_transcriptome.sh  extract_disagreement_reads.py  investigate.sh  reads.fq  run_tests.sh  save_golden.sh  test.fa  verify_framework.sh
tests/: phase9_threading.rs
